--- a/.github/workflows/deploy-go.yaml
+++ b/.github/workflows/deploy-go.yaml
@@ -46,9 +46,9 @@ jobs:
       - name: Azure login
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZ_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZ_TENANT_ID }}
+          subscription-id: ${{ secrets.AZ_SUBSCRIPTION_ID }}
 
       # HACK: use az cli to deploy bicep until azure/arm-deploy supports --template-spec
       - name: Deploy Container App
@@ -56,7 +56,7 @@ jobs:
           echo ca_outputs=$(az deployment group create \
             --name "${{ github.event.repository.name }}" \
             --resource-group "rg-credibil-${{ inputs.environment }}" \
-            --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
+            --subscription "${{ secrets.AZ_SUBSCRIPTION_ID }}" \
             --template-spec "/subscriptions/${{ env.GLOBAL_SUB }}/resourceGroups/rg-credibil-tools/providers/Microsoft.Resources/templateSpecs/ts-container-app/versions/1.0" \
             --parameters "appEnv=${{ inputs.environment }}" \
             --parameters "appName=${{ github.event.repository.name }}" \
@@ -82,6 +82,6 @@ jobs:
           az deployment group create \
             --name ${{ github.event.repository.name }} \
             --resource-group "rg-credibil-${{ inputs.environment }}" \
-            --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            --subscription ${{ secrets.AZ_SUBSCRIPTION_ID }} \
             --template-spec "/subscriptions/${{ env.GLOBAL_SUB }}/resourceGroups/rg-credibil-tools/providers/Microsoft.Resources/templateSpecs/ts-api-backend/versions/1.0" \
             --parameters ${{ steps.backend.outputs.result }}
