--- a/.github/workflows/build-go.yaml
+++ b/.github/workflows/build-go.yaml
@@ -8,9 +8,9 @@ name: Build Go container
 on:
   workflow_call:
     outputs:
-      tag:
-        description: The git tag for the build
-        value: ${{ jobs.image.outputs.tag }}
+      release:
+        description: The git release tag for the build
+        value: ${{ jobs.image.outputs.release }}
 
 jobs:
   image:
@@ -19,7 +19,7 @@ jobs:
       contents: write
       packages: write
     outputs:
-      tag: ${{ steps.curr-tag.outputs.result }}
+      release: ${{ steps.release.outputs.result }}
 
     # run unless explicitly skipped (commit message contains [skip])
     if: |
@@ -76,7 +76,7 @@ jobs:
       # increment repo version tag
       - run: npm install semver json-diff
       - name: Increment version
-        id: curr-tag
+        id: release
         uses: actions/github-script@v6
         with:
           script: |
@@ -163,7 +163,7 @@ jobs:
             GH_ORG=${{ github.repository_owner }}
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.curr-tag.outputs.result }}
+            ghcr.io/${{ github.repository }}:${{ steps.release.outputs.result }}
             ghcr.io/${{ github.repository }}:latest
 
       # create release (incl. underlying tag)
@@ -172,7 +172,7 @@ jobs:
         with:
           script: |
             const semver = require('semver')
-            const tag = '${{ steps.curr-tag.outputs.result }}'
+            const tag = '${{ steps.release.outputs.result }}'
 
             github.rest.repos.createRelease({
               owner: context.repo.owner,
